--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   feedback-link="">
     
       <google-codelab-step label="Overview" duration="5">
-        <p>Actions on Google è una piattaforma che ti permette di creare software che estende le funzionalità del Google Assistant](https://assistant.google.com/).</p>
+        <p>Actions on Google è una piattaforma che ti permette di creare software che estende le funzionalità del <a href="https://assistant.google.com/" target="_blank">Google Assistant</a>.</p>
 <h2>Che cosa farai in questo codelab</h2>
 <p>In questo codelab, creerai una semplice Action che funzionerà nel seguente modo:</p>
 <ul>
