fix first ol numbering

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 <li>A sinistra nell&#39;interfaccia, proprio sotto il logo DialogFlow, seleziona <strong>Create agent</strong>. Se hai già creato dei progetti, questa voce si trova in fondo al menù a tendina che elenca tutti i tuoi agenti.</li>
 </ol>
 <p><img alt="create_agent_plus" src="img\769829cfd83cb19a.png"></p>
-<ol type="1">
+<ol type="1" start="4">
 <li>Imposta un nome ed una lingua di default per il progetto.</li>
 </ol>
 <p><img alt="create_agent" src="img\5d1908fd0ad5beea.png"></p>
-<ol type="1">
+<ol type="1" start="5">
 <li>Fai click su &#34;Create&#34;.</li>
 </ol>
 <p>DialogFlow inizializzerà tutte le risorse necessarie a supporto del progetto.</p>
