--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <li>Un browser web, per esempio <a href="https://www.google.com/chrome/" target="_blank">Chrome</a>.</li>
 </ul>
 <h3><strong>Opzionale: ottieni il codice di esempio</strong></h3>
-<p>Se vuoi, puoi ottenere il codice associato a questo progetto dal nostro repository GitHub.</p>
+<p>Se vuoi, puoi ottenere il <a href="BAFYC-IWD19.zip" target="_blank">codice</a> associato a questo progetto dal nostro repository GitHub.</p>
 
 
       </google-codelab-step>
